140 birds flying circle

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,4 +23,50 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  background-image: url('/background.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+/* Circular Bird Animation Styles */
+.bird-circle-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 0;
+  height: 0;
+}
+
+.bird-orbit {
+  position: absolute;
+  top: 0;
+  left: 0;
+  animation: orbit 10s linear infinite;
+}
+
+.bird {
+  background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/174479/bird-cells-new.svg);
+  background-size: auto 100%;
+  width: 60px;
+  height: 85px;
+  will-change: background-position;
+  animation: fly-cycle 1s steps(10) infinite;
+  transform: translateX(-30px) translateY(-42.5px);
+}
+
+@keyframes orbit {
+  from {
+    transform: rotate(0deg) translateX(600px) rotate(-90deg);
+  }
+  to {
+    transform: rotate(-360deg) translateX(600px) rotate(-90deg);
+  }
+}
+
+@keyframes fly-cycle {
+  100% {
+    background-position: -600px 0;
+  }
 }
