--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,6 +47,10 @@ body {
   animation: orbit 10s linear infinite;
 }
 
+.bird-wrapper {
+  position: relative;
+}
+
 .bird {
   background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/174479/bird-cells-new.svg);
   background-size: auto 100%;
